syntax = "proto3";

option csharp_namespace = "DevConsole.Server.Protos";


service DevConsoleService {
  rpc Request (StringMsg) returns (StringMsg);
  rpc MaintainConnection (stream ProtobufMsg) returns (stream ProtobufMsg);
}

message StringMsg {
  int32 id = 1;
  int32 type = 2;
  string data = 3;
}

message ProtobufMsg
{
	int32 id = 1;
	int32 type = 2;
	int32 token = 3;
	bytes data = 4;
}

message ProtobufEmpty
{

}
